# train-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.hpp.in  run.sh  shader-compile.sh
cmake/: FindCityGML.cmake  FindOsmium.cmake  FindProtozero.cmake  FindXerces.cmake
shaders/: shader.frag  shader.vert
src/: app.cpp  app.hpp  chunk.cpp  chunk.hpp  citygml_reader.cpp  citygml_reader.hpp  coordinate_helper.cpp  coordinate_helper.hpp  exception.hpp  game.cpp  game.hpp  keyboard.cpp  keyboard.hpp  main.cpp  osm_element.cpp  osm_element.hpp  osm_loader.cpp  osm_loader.hpp  rendered_object.cpp  rendered_object.hpp  renderer.cpp  renderer.hpp  util.cpp  util.hpp  xyz_reader.cpp  xyz_reader.hpp
src/loaders/: buildings_loader.cpp  buildings_loader.hpp  height_data_loader.cpp  height_data_loader.hpp  loader.hpp  satelite_image_loader.cpp  satelite_image_loader.hpp
